Styling bugs on mobile fixed

--- a/Aegis.Web/wwwroot/css/app.css
+++ b/Aegis.Web/wwwroot/css/app.css
@@ -14,6 +14,8 @@ body{
     top: 0;
     left: 0;
     z-index: -1;
+    min-height: 100vh;
+    height: 100vh;
 }
 
 h1:focus {
